appYAML/dispatcher-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispatcher-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dispatcher
  template:
    metadata:
      labels:
        app: dispatcher
    spec:
      containers:
      - name: dispatcher
        image: fteychene/cloud-cadavre-exquis-dispatcher-bis:1.0-SNAPSHOT
        ports:
        - containerPort: 8080
